# archguard

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FEEDBACK.md  LICENSE  PRD.md  PROJECT.md  README.md  SECURITY.md  TESTING.md  USERID.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/instructions/: backend.instructions.md  testing.instructions.md
.github/workflows/: ci.yml  publish.yml
DECISIONS/: ADR-0001-initial-architecture.md
artifacts/: seed_repo_guardrails.ps1
artifacts/repo-guardrails/: guardrails.jsonl  links.jsonl  references.jsonl  taxonomy.json
docs/: DOMAIN.md  GLOSSARY.md  ROADMAP.md  SCAFFOLDING-NOTES.md  repo-guardrails.md
src/archguard/: __init__.py  __main__.py
src/archguard/cli/: __init__.py  export.py  guide.py  maintenance.py  read.py  setup.py  write.py
src/archguard/core/: embeddings.py  index.py  models.py  public_ids.py  search.py  search_terms.py  store.py  validator.py
src/archguard/defaults/: taxonomy.json
src/archguard/models/potion-base-8M/: README.md
src/archguard/output/: json.py  markdown.py  table.py
src/guardrails_cli/: __init__.py  __main__.py
src/guardrails_cli/cli/: __init__.py  export.py  maintenance.py  read.py  setup.py  write.py
src/guardrails_cli/core/: __init__.py  embeddings.py  index.py  models.py  search.py  store.py  validator.py
src/guardrails_cli/output/: json.py  markdown.py
tests/: conftest.py  test_cli.py  test_embeddings.py  test_export.py  test_formatters.py  test_index.py  test_models.py  test_properties.py  test_search.py  test_store.py  test_validator.py
