[project]
name = "guardrails-cli"
version = "0.1.0"
description = "Architecture guardrails management CLI — queryable store of architectural constraints, standards, and rules."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "EA Team" }]

dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "rich>=13.0",
    "orjson>=3.9",
    "python-ulid>=3.0",
    "model2vec>=0.3",
    "numpy>=1.26",
]

[project.scripts]
guardrails = "guardrails_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guardrails_cli"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "pyright>=1.1",
    "ruff>=0.4",
]
